// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildSliceData should add elementId and ignoreSeparator properties 1`] = `
Array [
  Object {
    "elementId": "a.0",
    "id": "a",
    "ignoreSeparator": true,
    "name": "LeadersSlice",
  },
  Object {
    "elementId": "b.1",
    "id": "b",
    "ignoreSeparator": true,
    "name": "DailyUniversalRegister",
  },
  Object {
    "elementId": "c.2",
    "id": "c",
    "ignoreSeparator": true,
    "name": "OtherSlice",
  },
  Object {
    "elementId": "d.3",
    "id": "d",
    "ignoreSeparator": true,
    "name": "LeadersSlice",
  },
  Object {
    "elementId": "e.4",
    "id": "e",
    "ignoreSeparator": true,
    "name": "DailyUniversalRegister",
  },
  Object {
    "elementId": "f.5",
    "id": "f",
    "name": "OtherSlice",
  },
  Object {
    "elementId": "g.6",
    "id": "g",
    "ignoreSeparator": true,
    "name": "OtherSlice",
  },
  Object {
    "elementId": "h.7",
    "id": "h",
    "ignoreSeparator": true,
    "name": "LeadersSlice",
  },
  Object {
    "elementId": "i.8",
    "id": "i",
    "name": "OtherSlice",
  },
  Object {
    "elementId": "j.9",
    "id": "j",
    "name": "OtherSlice",
  },
  Object {
    "elementId": "k.10",
    "id": "k",
    "ignoreSeparator": true,
    "name": "OtherSlice",
  },
  Object {
    "elementId": "l.11",
    "id": "l",
    "ignoreSeparator": true,
    "name": "DailyUniversalRegister",
  },
]
`;

exports[`createPuzzleData should create puzzle data and return 2 rows of puzzles 1`] = `
Array [
  Object {
    "elementId": "522abf2c-e752-11e8-9f32-f2801f1b9fd1.0",
    "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
    "name": "Puzzle",
    "puzzles": Array [
      Object {
        "hideOnMobile": false,
        "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
        "image": Object {
          "crop11": null,
          "crop169": null,
          "crop23": null,
          "crop32": Object {
            "url": "https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0",
          },
          "crop45": null,
          "crops": Array [],
          "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
        },
        "name": "Puzzle",
        "title": "Times Concise medium No 7881",
        "url": "/crossword/123",
      },
      Object {
        "hideOnMobile": false,
        "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
        "image": Object {
          "crop11": null,
          "crop169": null,
          "crop23": null,
          "crop32": Object {
            "url": "https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0",
          },
          "crop45": null,
          "crops": Array [],
          "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
        },
        "name": "Puzzle",
        "title": "Times Concise medium No 7881",
        "url": "/crossword/123",
      },
      Object {
        "hideOnMobile": false,
        "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
        "image": Object {
          "crop11": null,
          "crop169": null,
          "crop23": null,
          "crop32": Object {
            "url": "https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0",
          },
          "crop45": null,
          "crops": Array [],
          "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
        },
        "name": "Puzzle",
        "title": "Times Concise medium No 7881",
        "url": "/crossword/123",
      },
    ],
  },
  Object {
    "elementId": "522abf2c-e752-11e8-9f32-f2801f1b9fd1.1",
    "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
    "name": "Puzzle",
    "puzzles": Array [
      Object {
        "hideOnMobile": false,
        "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
        "image": Object {
          "crop11": null,
          "crop169": null,
          "crop23": null,
          "crop32": Object {
            "url": "https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0",
          },
          "crop45": null,
          "crops": Array [],
          "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
        },
        "name": "Puzzle",
        "title": "Times Concise medium No 7881",
        "url": "/crossword/123",
      },
      Object {
        "hideOnMobile": false,
        "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
        "image": Object {
          "crop11": null,
          "crop169": null,
          "crop23": null,
          "crop32": Object {
            "url": "https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0",
          },
          "crop45": null,
          "crops": Array [],
          "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
        },
        "name": "Puzzle",
        "title": "Times Concise medium No 7881",
        "url": "/crossword/123",
      },
      Object {
        "hideOnMobile": false,
        "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
        "image": Object {
          "crop11": null,
          "crop169": null,
          "crop23": null,
          "crop32": Object {
            "url": "https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0",
          },
          "crop45": null,
          "crops": Array [],
          "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
        },
        "name": "Puzzle",
        "title": "Times Concise medium No 7881",
        "url": "/crossword/123",
      },
    ],
  },
]
`;

exports[`createPuzzleData should create puzzle data and return 3 rows of puzzles 1`] = `
Array [
  Object {
    "elementId": "522abf2c-e752-11e8-9f32-f2801f1b9fd1.0",
    "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
    "name": "Puzzle",
    "puzzles": Array [
      Object {
        "hideOnMobile": false,
        "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
        "image": Object {
          "crop11": null,
          "crop169": null,
          "crop23": null,
          "crop32": Object {
            "url": "https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0",
          },
          "crop45": null,
          "crops": Array [],
          "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
        },
        "name": "Puzzle",
        "title": "Times Concise medium No 7881",
        "url": "/crossword/123",
      },
      Object {
        "hideOnMobile": false,
        "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
        "image": Object {
          "crop11": null,
          "crop169": null,
          "crop23": null,
          "crop32": Object {
            "url": "https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0",
          },
          "crop45": null,
          "crops": Array [],
          "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
        },
        "name": "Puzzle",
        "title": "Times Concise medium No 7881",
        "url": "/crossword/123",
      },
      Object {
        "hideOnMobile": false,
        "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
        "image": Object {
          "crop11": null,
          "crop169": null,
          "crop23": null,
          "crop32": Object {
            "url": "https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0",
          },
          "crop45": null,
          "crops": Array [],
          "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
        },
        "name": "Puzzle",
        "title": "Times Concise medium No 7881",
        "url": "/crossword/123",
      },
    ],
  },
  Object {
    "elementId": "522abf2c-e752-11e8-9f32-f2801f1b9fd1.1",
    "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
    "name": "Puzzle",
    "puzzles": Array [
      Object {
        "hideOnMobile": false,
        "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
        "image": Object {
          "crop11": null,
          "crop169": null,
          "crop23": null,
          "crop32": Object {
            "url": "https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0",
          },
          "crop45": null,
          "crops": Array [],
          "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
        },
        "name": "Puzzle",
        "title": "Times Concise medium No 7881",
        "url": "/crossword/123",
      },
      Object {
        "hideOnMobile": false,
        "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
        "image": Object {
          "crop11": null,
          "crop169": null,
          "crop23": null,
          "crop32": Object {
            "url": "https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0",
          },
          "crop45": null,
          "crops": Array [],
          "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
        },
        "name": "Puzzle",
        "title": "Times Concise medium No 7881",
        "url": "/crossword/123",
      },
      Object {
        "hideOnMobile": false,
        "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
        "image": Object {
          "crop11": null,
          "crop169": null,
          "crop23": null,
          "crop32": Object {
            "url": "https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0",
          },
          "crop45": null,
          "crops": Array [],
          "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
        },
        "name": "Puzzle",
        "title": "Times Concise medium No 7881",
        "url": "/crossword/123",
      },
    ],
  },
  Object {
    "elementId": "522abf2c-e752-11e8-9f32-f2801f1b9fd1.2",
    "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
    "name": "Puzzle",
    "puzzles": Array [
      Object {
        "hideOnMobile": false,
        "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
        "image": Object {
          "crop11": null,
          "crop169": null,
          "crop23": null,
          "crop32": Object {
            "url": "https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0",
          },
          "crop45": null,
          "crops": Array [],
          "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
        },
        "name": "Puzzle",
        "title": "Times Concise medium No 7881",
        "url": "/crossword/123",
      },
    ],
  },
]
`;

exports[`createPuzzleData should create puzzle data and return 3 rows of puzzles on resolution different than small  1`] = `
Array [
  Object {
    "elementId": "522abf2c-e752-11e8-9f32-f2801f1b9fd1.0",
    "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
    "name": "Puzzle",
    "puzzles": Array [
      Object {
        "hideOnMobile": false,
        "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
        "image": Object {
          "crop11": null,
          "crop169": null,
          "crop23": null,
          "crop32": Object {
            "url": "https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0",
          },
          "crop45": null,
          "crops": Array [],
          "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
        },
        "name": "Puzzle",
        "title": "Times Concise medium No 7881",
        "url": "/crossword/123",
      },
      Object {
        "hideOnMobile": false,
        "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
        "image": Object {
          "crop11": null,
          "crop169": null,
          "crop23": null,
          "crop32": Object {
            "url": "https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0",
          },
          "crop45": null,
          "crops": Array [],
          "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
        },
        "name": "Puzzle",
        "title": "Times Concise medium No 7881",
        "url": "/crossword/123",
      },
      Object {
        "hideOnMobile": false,
        "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
        "image": Object {
          "crop11": null,
          "crop169": null,
          "crop23": null,
          "crop32": Object {
            "url": "https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0",
          },
          "crop45": null,
          "crops": Array [],
          "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
        },
        "name": "Puzzle",
        "title": "Times Concise medium No 7881",
        "url": "/crossword/123",
      },
    ],
  },
  Object {
    "elementId": "522abf2c-e752-11e8-9f32-f2801f1b9fd1.1",
    "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
    "name": "Puzzle",
    "puzzles": Array [
      Object {
        "hideOnMobile": false,
        "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
        "image": Object {
          "crop11": null,
          "crop169": null,
          "crop23": null,
          "crop32": Object {
            "url": "https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0",
          },
          "crop45": null,
          "crops": Array [],
          "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
        },
        "name": "Puzzle",
        "title": "Times Concise medium No 7881",
        "url": "/crossword/123",
      },
      Object {
        "hideOnMobile": false,
        "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
        "image": Object {
          "crop11": null,
          "crop169": null,
          "crop23": null,
          "crop32": Object {
            "url": "https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0",
          },
          "crop45": null,
          "crops": Array [],
          "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
        },
        "name": "Puzzle",
        "title": "Times Concise medium No 7881",
        "url": "/crossword/123",
      },
      Object {
        "hideOnMobile": false,
        "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
        "image": Object {
          "crop11": null,
          "crop169": null,
          "crop23": null,
          "crop32": Object {
            "url": "https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0",
          },
          "crop45": null,
          "crops": Array [],
          "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
        },
        "name": "Puzzle",
        "title": "Times Concise medium No 7881",
        "url": "/crossword/123",
      },
    ],
  },
  Object {
    "elementId": "522abf2c-e752-11e8-9f32-f2801f1b9fd1.2",
    "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
    "name": "Puzzle",
    "puzzles": Array [
      Object {
        "hideOnMobile": true,
        "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
        "image": Object {
          "crop11": null,
          "crop169": null,
          "crop23": null,
          "crop32": Object {
            "url": "https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0",
          },
          "crop45": null,
          "crops": Array [],
          "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
        },
        "name": "Puzzle",
        "title": "Times Concise medium No 7881",
        "url": "/crossword/123",
      },
    ],
  },
]
`;
